--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
     body {
       background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Arial', cursive, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
